--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -25,18 +25,25 @@
       color: white;
     }
 
+    caption {
+      font-size: 1.5em;
+      font-weight: bold;
+      padding: 10px;
+      background-color: lightgray;
+    }
+
     .num {
       text-align: right;
     }
   </style>
 </head>
 <body>
-  <h1>Minha segunda tabela</h1>
   <table>
+    <caption>População das Unidades Federativas</caption>
     <thead>
       <tr>
-        <th>Estado</th>
-        <th>População</th>
+        <th scope="col">Estado</th>
+        <th scope="col" style="width: 50px;">População</th>
       </tr>
     </thead>
 
@@ -81,12 +88,80 @@
         <td>Santa Catarina</td>
         <td class="num">7.338.473</td>
       </tr>
+      <tr>
+        <td>Gioás</td>
+        <td class="num">6.003.788</td>
+      </tr>
+      <tr>
+        <td>Maranhão</td>
+        <td class="num">6 574 789</td>
+      </tr>
+      <tr>
+        <td>Amazonas</td>
+        <td class="num">3 483 985</td>
+      </tr>
+      <tr>
+        <td>Espírito Santo</td>
+        <td class="num">3 514 952</td>
+      </tr>
+      <tr>
+        <td>Paraíba</td>
+        <td class="num">3 766 528</td>
+      </tr>
+      <tr>
+        <td>Mato Grosso</td>
+        <td class="num">3 035 122</td>
+      </tr>
+      <tr>
+        <td>Rio Grande do Norte</td>
+        <td class="num">3 168 027</td>
+      </tr>
+      <tr>
+        <td>Alagoas</td>
+        <td class="num">3 120 494</td>
+      </tr>
+      <tr>
+        <td>Piauí</td>
+        <td class="num">3 118 360</td>
+      </tr>
+      <tr>
+        <td>Distrito Federal</td>
+        <td class="num">2 570 160</td>
+      </tr>
+      <tr>
+        <td>Mato Grosso do Sul</td>
+        <td class="num">2 449 024</td>
+      </tr>
+      <tr>
+        <td>Sergipe</td>
+        <td class="num">2 068 017</td>
+      </tr>
+      <tr>
+        <td>Rondônia</td>
+        <td class="num">1 562 409</td>
+      </tr>
+      <tr>
+        <td>Tocantins</td>
+        <td class="num">1 383 445</td>
+      </tr>
+      <tr>
+        <td>Acre</td>
+        <td class="num">733 559</td>
+      </tr>
+      <tr>
+        <td>Amapá</td>
+        <td class="num">669 526</td>
+      </tr>
+      <tr>
+        <td>Roraima</td>
+        <td class="num">450 479</td>
+      </tr>
     </tbody>
 
     <tfoot>
       <tr>
-        <th>Total de Habitantes</th>
-        <td class="num"><strong>158.640.772</strong></td>
+        <th scope="row">Total de Habitantes</th>
+        <td class="num"><strong>213.317.639</strong></td>
       </tr>
     </tfoot>
   </table>
@@ -95,21 +170,5 @@
 
 <!-- 
 
-  Goiás	6 003 788
-  Maranhão	6 574 789
-  Amazonas	3 483 985
-  Espírito Santo	3 514 952
-  Paraíba	3 766 528
-  Mato Grosso	3 035 122
-  Rio Grande do Norte	3 168 027
-  Alagoas	3 120 494
-  Piauí	3 118 360
-  Distrito Federal	2 570 160
-  Mato Grosso do Sul	2 449 024
-  Sergipe	2 068 017
-  Rondônia	1 562 409
-  Tocantins	1 383 445
-  Acre	733 559
-  Amapá	669 526
-  Roraima	450 479
+  
  -->
