--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -44,7 +44,7 @@
   Eligendi autem culpa odit sit earum nostrum perferendis debitis, laboriosam quia ipsam sapiente. Nostrum optio, ipsum cupiditate possimus tenetur at, molestias consequatur velit numquam laborum, porro mollitia? Necessitatibus, mollitia. Dolorem!
   Ab, cum sequi illo a porro consequuntur temporibus ipsum adipisci quae ullam inventore error quasi repellendus repellat minus laudantium vitae earum at deserunt suscipit voluptatum ipsa ex. Ut, assumenda repudiandae!</p>
 
-  <iframe src="" frameborder="1" id="tela" name="frame">
+  <iframe srcdoc="<h1>Escolha uma das opções acima!</h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis consectetur laboriosam fugit explicabo similique reiciendis, natus non quaerat repellat blanditiis, dignissimos temporibus quisquam quam itaque ullam odio, perferendis magni! Cumque.</p><img src='./imagens/instagram-multi-004.png' width='300px'>" frameborder="1" id="tela" name="frame">
     <p class="error">Infelizmente seu navegador não é compatível com iframe!</p>
   </iframe>
 
