--- a/exercicios/ex025/form004.html
+++ b/exercicios/ex025/form004.html
@@ -7,9 +7,28 @@
   <title>Formulário</title>
 </head>
 <body>
-  <h1></h1>
-  <form action="" method="get">
-    
+  <h1>Teste de Formulário</h1>
+  <form action="cadastro.php" method="get" autocomplete="on">
+    <fieldset>
+      <legend>Dados Pessoais</legend>
+      <p>
+        <label for="inome">Nome</label>
+        <input type="text" name="nome" id="inome">
+      </p>
+      <p>
+        <label for="iemail">E-mail</label>
+        <input type="email" name="email" id="iemail" required autocomplete="email" placeholder="email@email.com">
+      </p>
+      <p>
+        <label for="itel">Telefone</label>
+        <input type="tel" name="tel" id="itel" required autocomplete="tel" pattern="^\(\d{2}\)\d{4,5}-\d{4,5}$" placeholder="(xx)xxxx-xxxx">
+      </p>
+    </fieldset>
+    <!-- Estudar mais sobre RegEx -->
+    <p>
+      <input type="submit" value="Enviar">
+      <input type="reset" value="Limpar">
+    </p>
   </form>
 </body>
 </html>
