--- a/exercicios/ex025/form005.html
+++ b/exercicios/ex025/form005.html
@@ -9,9 +9,31 @@
 <body>
   <h1>Testes de Formulários</h1>
   <form action="cadastro.php" method="get">
-    <p>
-      <label for=""></label>
-    </p>
+    <fieldset>
+      <legend>Esportes Favoritos</legend>
+
+      <p>
+        <input type="checkbox" name="esbas" id="iesbas" checked>
+        <label for="iesbas">Basquete</label><br>
+        <input type="checkbox" name="esfut" id="iesfut" checked> 
+        <label for="iesfut">Futebol</label> <br>
+        <input type="checkbox" name="esnat" id="iesnat"> 
+        <label for="iesnat">Natação</label> <br>
+        <input type="checkbox" name="esten" id="iesten"> 
+        <label for="iesten">Tênis</label>
+      </p>
+    </fieldset>
+
+    <fieldset>
+      <legend>Sexo</legend>
+
+      <p>
+        <input type="radio" name="sexo" id="isxmas" value="m" checked>
+        <label for="isxmas">Masculino</label><br>
+        <input type="radio" name="sexo" id="isxfem" value="f">
+        <label for="isxfem">Feminino</label>
+      </p>
+    </fieldset>
 
     <p>
       <input type="submit" value="Enviar">
