--- a/exercicios/ex025/form010.html
+++ b/exercicios/ex025/form010.html
@@ -11,7 +11,7 @@
   <form action="cadastro.php" method="post" autocomplete="off">
     <p>
       <label for="iano">Em que ano você nasceu? </label>
-      <input type="number" name="ano" id="iano" min="1900" value="1997" required oninput="calcIdade()">
+      <input type="number" name="ano" id="iano" min="1900" value="2000" required oninput="calcIdade()">
     </p>
 
     <p>
@@ -30,7 +30,7 @@
     const idade = document.querySelector('#iidade');
     const ano = document.querySelector('#iano');
 
-    window.onload = function() {
+    window.onload = () => {
       ano.setAttribute('max', anoAtual);
       idade.innerHTML = Number(anoAtual) - Number(ano.value);
     }
