--- a/exercicios/ex026/mq004/index.html
+++ b/exercicios/ex026/mq004/index.html
@@ -4,9 +4,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Title</title>
+  <title>Media Query</title>
+  <link rel="stylesheet" href="css/style.css" media="all">
+  <link rel="stylesheet" href="css/media-query.css">
 </head>
 <body>
-
+  <main>
+    <h1>Testando Media Queries</h1>
+    <img id="phone" src="../imagens/icon-phone.png" alt="Versão para Smatphone">
+    <img id="tablet" src="../imagens/icon-tablet.png" alt="Versão para Tablet">
+    <img id="print" src="../imagens/icon-print.png" alt="Versão para impressão">
+    <img id="pc" src="../imagens/icon-pc.png" alt="Versão para PC">
+    <img id="tv" src="../imagens/icon-tv.png" alt="Versão para TV">
+  </main>
 </body>
 </html>
