--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -6,11 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Media Query</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
 </head>
 <body>
   <header>
     <h1>Meu Site</h1>
-    <nav>
+    <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+    <nav id="menuItens">
       <ul>
         <li><a href="#">Opção 1</a></li>
         <li><a href="#">Opção 2</a></li>
@@ -22,15 +25,41 @@
   </header>
   <main>
     <article>
-      <h2>Testando Media Queries</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A amet animi aspernatur autem corporis cumque dicta dolorem,
-         doloribus ex expedita fugit ipsam labore natus non, placeat quo rem, tempora ut?</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores blanditiis dicta dolor impedit inventore iste, labore odit
-         quas, quod repellat sit tempore tenetur, totam velit veritatis! Amet aspernatur soluta vel!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi at blanditiis cum et itaque minima non odio ratione,
-         repudiandae voluptatum? Amet deleniti dignissimos, fuga illum laudantium rem tempore ullam voluptatem.</p>
+      <h2>HTML: Linguagem de Marcação de Hipertexto</h2>
+      <p>
+        HTML (Linguagem de Marcação de HiperTexto) é o bloco de construção mais básico da web.
+        Define o significado e a estrutura do conteúdo da web. Outras tecnologias além do HTML geralmente são usadas
+        para descrever a aparência/apresentação (CSS) ou a funcionalidade/comportamento (JavaScript) de uma página da web.
+      </p>
+
+      <p>
+        "Hipertexto" refere-se aos links que conectam páginas da Web entre si, seja dentro de um único site ou entre sites.
+        Links são um aspecto fundamental da web. Ao carregar conteúdo na Internet e vinculá-lo a páginas criadas por
+        outras pessoas, você se torna um participante ativo na world wide web.
+      </p>
+
+      <p>
+        O HTML usa "Marcação" para anotar texto, imagem e outros conteúdos para exibição em um navegador da Web.
+      </p>
+
+      <p>
+        Um elemento HTML é separado de outro texto em um documento por "tags", que consistem no nome do elemento entre
+        "<" e ">". O nome de um elemento dentro de uma tag é insensível a maiúsculas e minúsculas. Isto é,
+        pode ser escrito em maiúsculas, minúsculas ou um mistura. Por exemplo, a tag <code>title</code> pode ser escrita como
+        <code>TITLE</code> ou de qualquer outra forma.
+      </p>
 
     </article>
   </main>
+
+  <script>
+    function clickMenu () {
+      if (menuItens.style.display === 'block') {
+        menuItens.style.display = 'none'
+      } else {
+        menuItens.style.display = 'block'
+      }
+    }
+  </script>
 </body>
 </html>
